[gd_scene load_steps=6 format=3 uid="uid://vsgv6bw2mi2r"]

[ext_resource type="Script" path="res://Scripts/test.gd" id="1_m30eq"]
[ext_resource type="Texture2D" uid="uid://c5dtrh5kaauy6" path="res://assets/wooden-5182590_1280.jpg" id="2_61bna"]

[sub_resource type="Animation" id="Animation_cyeo6"]
resource_name = "fade"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("fade:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0, 0, 0, 0), Color(0, 0, 0, 1)]
}

[sub_resource type="Animation" id="Animation_fe2gr"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("fade:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0, 0, 0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_2brr0"]
_data = {
"RESET": SubResource("Animation_fe2gr"),
"fade": SubResource("Animation_cyeo6")
}

[node name="test" type="Node2D"]
script = ExtResource("1_m30eq")

[node name="Wooden-51825901280" type="Sprite2D" parent="."]
position = Vector2(960, 540.775)
scale = Vector2(1.50156, 1.26665)
texture = ExtResource("2_61bna")

[node name="notes" type="Node2D" parent="."]

[node name="spawn_timer" type="Timer" parent="."]
one_shot = true

[node name="score_bar" type="ProgressBar" parent="."]
offset_left = 23.0
offset_top = 13.0
offset_right = 486.0
offset_bottom = 73.0
step = 1.0
show_percentage = false

[node name="score_label" type="Label" parent="."]
offset_left = 33.0
offset_top = 22.0
offset_right = 113.0
offset_bottom = 67.0
theme_override_font_sizes/font_size = 30
text = "Score"

[node name="level_label" type="Label" parent="."]
offset_left = 891.0
offset_right = 971.0
offset_bottom = 45.0
theme_override_font_sizes/font_size = 30
text = "Score"

[node name="bg" type="ColorRect" parent="."]
offset_left = 10.0
offset_top = 1047.0
offset_right = 371.0
offset_bottom = 1071.0

[node name="time_bar" type="ColorRect" parent="."]
offset_left = 10.0
offset_top = 1047.0
offset_right = 371.0
offset_bottom = 1071.0
color = Color(0, 1, 0, 1)

[node name="Timer" type="Timer" parent="."]
one_shot = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_2brr0")
}

[node name="fade" type="ColorRect" parent="."]
visible = false
offset_left = -15.0
offset_top = -20.0
offset_right = 1940.0
offset_bottom = 1103.0
mouse_filter = 2
color = Color(0, 0, 0, 0)

[node name="you lose" type="Label" parent="fade"]
visible = false
offset_left = 622.0
offset_top = 471.0
offset_right = 1844.0
offset_bottom = 679.0
theme_override_font_sizes/font_size = 150
text = "You Lose"

[connection signal="timeout" from="spawn_timer" to="." method="_on_spawn_timer_timeout"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
